tests/build/cases/widget/malformed_property_type2.stderr
error: property input can only have `impl OneTrait` types
 --> cases/widget/malformed_property_type2.rs:8:17
  |
8 |         pub foo(_) = 10;
  |                 ^

error[E0433]: failed to resolve: use of undeclared crate or module `foo`
 --> cases/widget/malformed_property_type2.rs:8:13
  |
8 |         pub foo(_) = 10;
  |             ^^^ use of undeclared crate or module `foo`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
 --> cases/widget/malformed_property_type2.rs:8:17
  |
8 |         pub foo(_) = 10;
  |                 ^ not allowed in type signatures
  |
help: use type parameters instead
  |
8 |         pub foo<T>(T) = 10;
  |                +++ ~
